# ImageStreamCombiner

./: .gitignore  ImageStreamCombiner.py  README.md  main.py  main_ui.py  main_ui2.py  meson.build  pyproject.toml
.github/workflows/: mypy.yml
combine_ImageStream_tif_files/: combine_imagestream_files.py  pyproject.toml  readme.md
combine_ImageStream_tif_files/combine_imagestream_files/: __init__.py
combine_imagestream_files/: __init__.py  dataset.py  imagestreamzip.py  processzip.py
demofiles/: Arctic_Conditions.toml
src/combine_imagestream_files/: dataset.py  groupthem.py  start.py
ui/: __init__.py  customwidgets.py  form.py  form.ui  readme.md
