[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "combine_imagestream_files"
version = "1.0.0"
description = "combine imagestream files"
readme = "readme.md"
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ImageStream"]
dependencies = [
    "tifffile",
    "numpy",
    "imagecodecs",
    "PyQt6"
]
requires-python = ">=3.11"
[project.optional-dependencies]
dev = ["black", "mypy", "pytest", "bumpver", "pandas-stubs", "pyinstaller"]

[project.scripts]
tmeanalyzer = "combine_imagestream_files:main"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.mypy]
python_version = '3.11'
packages = "combine_imagestream_files"
strict = true

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"combine_imagestream_files/version.py" = [
    "{version}"
]